# powercamp

./: .gitignore  pyproject.toml
.github/: README.md
.github/workflows/: unittest.yml
POWERCAMP/: manage.py
POWERCAMP/CORE/: admin.py  asgi.py  urls.py  wsgi.py
POWERCAMP/CORE/settings/: base.py  deploy.py  dev.py
POWERCAMP/hall/: urls.py  views.py
POWERCAMP/home/: urls.py  views.py
POWERCAMP/home/tests/views/: test_home.py  test_register.py
POWERCAMP/static/home/css/: land.css  register.css
POWERCAMP/teams/: admin.py  apps.py  models.py  urls.py  views.py
POWERCAMP/teams/migrations/: 0001_initial.py
POWERCAMP/teams/tests/models/: test_member.py  test_team.py
POWERCAMP/templates/admin/: index.html
POWERCAMP/templates/hall/: index.html
POWERCAMP/templates/home/: index.html  landpage.html  register.html
POWERCAMP/templates/shared/: base.html
POWERCAMP/templates/teams/: index.html
