[project]
name = "powercamp"
version = "0.2.0"
description = "PowerCamp 2025"
readme = { file = ".github/README.md", content-type = "text/markdown" }
license = { file = "LICENSE" }
authors = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]
maintainers = [{ name = "LucasGonc", email = "lucasgoncsilva04@gmail.com" }]
requires-python = ">=3.13"

dependencies = [
    "dj-database-url>=2.3.0",
    "django>=5.1.7",
    "django-storages>=1.14.6",
    "google-cloud-storage>=3.1.0",
    "gunicorn>=23.0.0",
    "pillow>=11.1.0",
    "psycopg2-binary>=2.9.10",
    "whitenoise>=6.9.0",
]

[dependency-groups]
dev = ["django-extensions>=4.0", "ruff>=0.11.5"]

[project.urls]
Repository = "https://github.com/lucasGoncSilva/powercamp/"

[tool.ruff]
line-length = 88
exclude = [".env", ".venv"]
fix = true

[tool.ruff.format]
quote-style = "single"
docstring-code-format = true

[tool.ruff.lint]
select = ["I", "E", "UP", "F"]
fixable = ["ALL"]

[tool.ruff.lint.isort]
case-sensitive = true
lines-after-imports = 2
